--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
   <meta charset="utf-8" >
-  <link rel="stylesheet" href="C:\Users\FRAGRANCE\Desktop\tribute-page\style.css">
+  <link rel="stylesheet" href="style.css">
 
   <main id="main">
   <h1 id="title">ALBERT EINSTEIN</h1>
